fix bank list alignment (#416)

--- a/src/components/WalletsAndBanks/BankAccountTab/LinkedBankAccountTable/style.scss
+++ b/src/components/WalletsAndBanks/BankAccountTab/LinkedBankAccountTable/style.scss
@@ -44,4 +44,8 @@
     display: flex;
     width: 113%;
   }
+
+  &__account-btn-group {
+    float: right;
+  }
 }
